# rumtopf

./: Cargo.toml  LICENSE  Readme.md  build.rs
.github/workflows/: ci.yml
recipes/: boiled_eggs.de.md  boiled_eggs.en.md  boiled_eggs.md  pizza.md
resources/: "pizza".md  boiled_eggs.md  pizza.md  rumtopf.css  rumtopf.js
src/: args.rs  files.rs  index.html  l10n.json  l10n.rs  main.rs  parsing.rs  recipe.html  scaling.html  servings.html  template.html  utils.rs  writing.rs
src/static/: rumtopf.js
src/templates/: footer.html  head.html  header.html  index.html  lang.html  recipe.html  scaling.html  servings.html
