[package]
name = "rumtopf"
version = "0.1.0"
edition = "2021"
authors = ["vilaureu"]

[dependencies]
pulldown-cmark = { version = "0.9.3", default-features = false }
regex = "1.9.3"
handlebars = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.6", features = ["derive"] }
