[package]
name = "rumtopf"
version = "0.1.0"
edition = "2021"
authors = ["vilaureu"]

[dependencies]
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"] }
pulldown-cmark-escape = "0.11.0"
regex = "1.9.3"
handlebars = "6.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
